added a newline to make button more visible

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ Room:<br>
 
 <br>Slices to display:<br>
 <input type="textfield" value="3.0" id="t_slice1" size="5" style="text-align: right"/>ft above floor<br>
-<input type="textfield" value="5.5" id="t_slice2" size="5" style="text-align: right"/>ft above floor
+<input type="textfield" value="5.5" id="t_slice2" size="5" style="text-align: right"/>ft above floor<br>
 
 <br>
 <button onClick="Processing.getInstanceById('sketch').setParameters(
